--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,13 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.uv]
+dev-dependencies = [
+    "mypy>=1.14.1",
+]
+
 [project.scripts]
 django-unasyncify = "django_unasyncify.cmd:main"
+
+[tool.mypy]
+check_untyped_defs = true
