--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ build-backend = "hatchling.build"
 [tool.uv]
 dev-dependencies = [
     "mypy>=1.14.1",
+    "sphinx>=8.1.3",
 ]
 
 [project.scripts]
