--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "django-unasyncify"
 version = "0.1.0"
 description = "Add your description here"
-readme = "README.md"
+readme = "README.rst"
 requires-python = ">=3.12"
 dependencies = [
     "libcst>=1.6.0",
