--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "django-unasyncify"
 version = "0.1.0"
-description = "Add your description here"
+description = "Codegen tooling to maintain synchronous and asynchronous Django APIs"
 readme = "README.rst"
 requires-python = ">=3.12"
 dependencies = [
